[package]
name = "ironjvm_cfparser"
authors = ["HTGAzureX1212."]
version = "18.0.0"
description = "Java classfile parser for IronJVM"
edition = "2021"
license = "GPL-2.0"

[dependencies]
ironjvm_javautil = { path = "../ironjvm_javautil" }
ironjvm_specimpl = { path = "../ironjvm_specimpl" }

[dev-dependencies]
criterion = "0.3.6"
expect-test = "1.3.0"

[[bench]]
name = "basic_parse"
harness = false

[[bench]]
name = "intentional_large"
harness = false
